Fix saving layers with layer styles

We should deep copy the layer style projections
when cloning the image. Otherwise shape layers and
other delayed update nodes might cause rerender of
the layers stack and lacking layers styles will become
visible in the saved image.

BUG:396224